# MasterPassword

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Brewfile  CNAME  Dockerfile  INSTALL.md  README.md  _config.yml  build.gradle  gradle.properties  homebrew-mpw.rb  how.html  index.html  masterpassword-algorithm.pages  masterpassword-android-2.5.1.apk  masterpassword-android.apk  masterpassword-cli.tar.gz.sig  masterpassword-primer.pages  mpw-2.5-cli-2-0-g3ed6b937.tar.gz.sig  mpw-2.6-cli-1-0-g895df637.tar.gz.sig  mpw-2.6-cli-2-0-g30fdb54e.tar.gz.sig  mpw-2.6-cli-4-0-gf8043ae1.tar.gz.sig  mpw-2.6-cli-5-0-g344771db.tar.gz.sig  privacy.html  settings.gradle  todo  what.html  why.html
Crashlytics/Crashlytics.framework/: run
Localytics/: Localytics.plist  LocalyticsDatabase.h  LocalyticsDatabase.m  LocalyticsSession.h  LocalyticsSession.m  LocalyticsUploader.h  LocalyticsUploader.m  UploaderThread.h  UploaderThread.m  WebserviceConstants.h
MasterPassword/: .OPMainViewController.h.swk  .OPMainViewController.h.swl  .OPMainViewController.h.swm  .OPMainViewController.h.swn  .OPMainViewController.h.swo  .OPTypes.m.swn  .OPTypes.m.swo  MPAlgorithm.h  MPAlgorithm.m  MPAlgorithmV0.m  MPAlgorithmV1.m  MPAppDelegate.h  MPAppDelegate.m  MPAppDelegate_Key.h  MPAppDelegate_Key.m  MPAppDelegate_Shared.h  MPAppDelegate_Shared.m  MPAppDelegate_Store.h  MPAppDelegate_Store.m  MPConfig.h  MPConfig.m  MPContentViewController.h  MPContentViewController.m  MPElementEntity.h  MPElementEntity.m  MPElementGeneratedEntity.h  MPElementGeneratedEntity.m  MPElementStoredEntity.h  MPElementStoredEntity.m  MPEntities.h  MPEntities.m  MPGuideViewController.h  MPGuideViewController.m  MPKey.h  MPKey.m  MPMainViewController.h  MPMainViewController.m  MPRecentViewController.h  MPRecentViewController.m  MPSearchDelegate.h  (+42 more)
MasterPassword-Mac.xcodeproj/: project.pbxproj
MasterPassword-iOS.xcodeproj/: project.pbxproj
MasterPassword.sketch/: Data
MasterPassword.xcodeproj/: project.pbxproj
MasterPassword.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MasterPassword.xcworkspace/: contents.xcworkspacedata
MasterPassword.xcworkspace/xcshareddata/: MasterPassword.xccheckout  MasterPassword.xcscmblueprint
MasterPassword/C/: .mpw  bashlib  build  ciphers.plist  clean  distribute  install  mpw-algorithm.c  mpw-algorithm.h  mpw-algorithm_v0.c  mpw-algorithm_v1.c  mpw-algorithm_v2.c  mpw-algorithm_v3.c  mpw-algorithm_v4.c  mpw-bench.c  mpw-cli.c  mpw-tests-util.c  mpw-tests-util.h  mpw-tests.c  mpw-types.c  mpw-types.h  mpw-util.c  mpw-util.h  mpw.bashrc  mpw.c  mpw.completion.bash  mpw.h  mpw_tests.xml  types.c  types.h
MasterPassword/CSharp/: MasterPassword.sln
MasterPassword/Java/: .gitignore  build.gradle  pom.xml
MasterPassword/Mac/: MPAppDelegate.h  MPAppDelegate.m  MPMacConfig.h  MPMacConfig.m  MPPasswordWindowController.h  MPPasswordWindowController.m  MPPasswordWindowController.xib  MasterPassword-Info.plist  MasterPassword-Prefix.pch  main.m
MasterPassword/MasterPassword.xcdatamodeld/: .xccurrentversion
MasterPassword/ObjC/: MPAlgorithm.h  MPAlgorithm.m  MPAlgorithmV0.h  MPAlgorithmV0.m  MPAlgorithmV1.h  MPAlgorithmV1.m  MPAlgorithmV2.h  MPAlgorithmV2.m  MPAlgorithmV3.h  MPAlgorithmV3.m  MPAppDelegate_InApp.h  MPAppDelegate_InApp.m  MPAppDelegate_Key.h  MPAppDelegate_Key.m  MPAppDelegate_Shared.h  MPAppDelegate_Shared.m  MPAppDelegate_Store.h  MPAppDelegate_Store.m  MPConfig.h  MPConfig.m  MPElementEntity.h  MPElementEntity.m  MPElementGeneratedEntity.h  MPElementGeneratedEntity.m  MPElementStoredEntity.h  MPElementStoredEntity.m  MPEntities.h  MPKey.h  (+15 more)
OnePassword/: MainStoryboard_iPhone.storyboard  OPAppDelegate.h  OPAppDelegate.m  OPConfig.h  OPConfig.m  OPContentViewController.h  OPContentViewController.m  OPElementEntity.h  OPElementEntity.m  OPElementGeneratedEntity.h  OPElementGeneratedEntity.m  OPElementStoredEntity.h  OPElementStoredEntity.m  OPGuideViewController.h  OPGuideViewController.m  OPMainViewController.h  OPMainViewController.m  OPRecentViewController.h  OPRecentViewController.m  OPSaltedCipherViewController.h  OPSaltedCipherViewController.m  OPSearchDelegate.h  OPSearchDelegate.m  OPTypeViewController.h  OPTypeViewController.m  OPTypes.h  OPTypes.m  OnePassword-Info.plist  OnePassword-Prefix.pch  ciphers.plist  main.m  types.c
OnePassword.sketch/: Data
OnePassword.xcodeproj/: project.pbxproj
Pearl/: Pearl-Prefix.pch
Resources/: ciphers.plist  help.html
Scripts/: bashlib  checkLocalization  convertImages  genassets  updateDependencies  updatePlist
SendToMac/: SendToMac-Prefix.pch  SendToMac.h  SendToMac.m
Site/: algorithm.html  index.html  send.php  support.html  sync  what.html
TestFlight/: README.md  README.txt  TestFlight.h  TestFlight.plist  release_notes.md  release_notes.txt
Tests/: Tests.m
_includes/: footer.html  head.html  header.html
_sass/: _layout.scss
gradle/: README.md  build.gradle  gradle.properties  homebrew-mpw.rb  pom.xml  settings.gradle
js/: jquery.paroller.min.js  main.js
platform-android/: CMakeLists.txt  build.gradle  pom.xml  proguard.cfg
platform-android/src/main/java/com/lyndir/masterpassword/: EmergencyActivity.java  MPConstants.java  MainThreadExecutor.java  Preferences.java  Res.java  TestActivity.java
platform-android/src/main/res/layout/: activity_emergency.xml  activity_test.xml
platform-android/src/main/res/values/: strings.xml  styles.xml
platform-darwin/: Podfile
platform-independent/c/cli/: .gitignore  CMakeLists.txt  Dockerfile  build  clean  distribute  mpw-cli-tests  mpw_tests.xml
platform-independent/c/cli/src/: bcrypt.c  blf.h  blowfish.c  mpw-bench.c  mpw-cli-util.c  mpw-cli-util.h  mpw-cli.c  mpw-tests-util.c  mpw-tests-util.h  mpw-tests.c
platform-independent/cli-c/: .gitignore  CMakeLists.txt  README.md  bashcomplib  build  clean  core  distribute  install  lib  mpw.bashrc  mpw_tests.xml
platform-independent/cli-c/cli/: bcrypt.c  bcrypt.h  blf.h  blowfish.c  blowfish.h  mpw-bench.c  mpw-cli-util.c  mpw-cli-util.h  mpw-cli.c  mpw-tests-util.c  mpw-tests.c
(+1076 files in other folders)
